// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User should render User with host user pro 1`] = `
<div
  className="property__host-__user user"
>
  <div
    className="property__host-__avatar-wrapper user__avatar-wrapper property__host-__avatar-wrapper--pro"
  >
    <img
      alt="James avatar"
      className="property__host-__avatar user__avatar"
      height={74}
      src="avatar"
      width={74}
    />
  </div>
  <span
    className="property__host-__user-name"
  >
    James
  </span>
</div>
`;

exports[`User should render User with review user 1`] = `
<div
  className="reviews____user user"
>
  <div
    className="reviews____avatar-wrapper user__avatar-wrapper "
  >
    <img
      alt="Bob avatar"
      className="reviews____avatar user__avatar"
      height={74}
      src="avatar"
      width={74}
    />
  </div>
  <span
    className="reviews____user-name"
  >
    Bob
  </span>
</div>
`;
